--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT = "8080"
+MONGODB_URI="mongodb+srv://zaxar:zaxar@clusterrecommendation.rcdk578.mongodb.net/?retryWrites=true&w=majority"
+JWT_SECRET= "s&HHJSD*hjkhds23"
