--- a/package.json
+++ b/package.json
@@ -5,20 +5,32 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc --project ./",
-    "start": "nodemon src/index.ts"
+    "generate": "graphql-codegen --config codegen.yml",
+    "compile": "npm run generate && npm run build",
+    "start": "npm run compile && nodemon src/index.js",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.3.3",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "3.1.0",
+    "@graphql-codegen/typescript": "3.0.1",
+    "@graphql-codegen/typescript-resolvers": "3.1.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.14",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
